# devman_async_lesson2

./: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
starship/: animations.py  common_tools.py  curses_tools.py  drawing_tools.py  explosion.py  game_scenario.py  main.py  obstacles.py  physics.py  settings.py  space_garbage.py  spaceship.py
starship/frames/: game_over.txt
starship/settings/: game_state.py  settings.py
starship/tools/: common_tools.py  curses_tools.py  drawing_tools.py
