[tool.poetry]
name = "devmanasynclesson2"
version = "0.1.0"
description = ""
authors = ["Nedashkovsky <Nedashkovsky@ymail.com>"]
readme = "README.md"

packages = [
    { include = "starship"},
]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
