[tool.poetry]
name = "devmanasynclesson2"
version = "0.1.0"
description = ""
authors = ["Nedashkovsky <Nedashkovsky@ymail.com>"]
readme = "README.md"

packages = [
    { include = "starship" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
asyncio = "^3.4.3"

[tool.poetry.scripts]
starship = "starship.main:run_starship"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
